<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.standing.StandingFragment">

    <Spinner
        android:id="@+id/spinnerStanding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerStanding"
        android:layout_marginTop="10dp">

        <ScrollView
            android:layout_below="@id/spinnerMatch"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:scrollbars="none">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorSemiDarkBlue"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/tvPosition"
                            android:layout_width="25dp"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:text="@string/postion"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/tvTeamName"
                            android:layout_width="85dp"
                            android:layout_height="wrap_content"
                            android:text="@string/team"
                            android:textAlignment="center"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/tvPosition"
                            app:layout_constraintTop_toTopOf="parent"
                            android:textColor="@android:color/white" />

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical|end"
                            android:orientation="horizontal"
                            android:layout_marginStart="10dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/tvTeamName"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                android:layout_width="30dp"
                                android:layout_height="wrap_content"
                                android:text="@string/match_played"
                                android:textAlignment="center"
                                android:textColor="@android:color/white" />

                            <TextView
                                android:layout_width="30dp"
                                android:layout_height="wrap_content"
                                android:text="@string/win"
                                android:textAlignment="center"
                                android:textColor="@android:color/white" />

                            <TextView
                                android:layout_width="30dp"
                                android:layout_height="wrap_content"
                                android:text="@string/draw"
                                android:textAlignment="center"
                                android:textColor="@android:color/white" />

                            <TextView
                                android:layout_width="30dp"
                                android:layout_height="wrap_content"
                                android:text="@string/loss"
                                android:textAlignment="center"
                                android:textColor="@android:color/white" />

                            <TextView
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:text="@string/gf_ga"
                                android:textAlignment="center"
                                android:textColor="@android:color/white" />

                            <TextView
                                android:layout_width="30dp"
                                android:layout_height="wrap_content"
                                android:text="@string/gd"
                                android:textAlignment="center"
                                android:textColor="@android:color/white" />

                            <TextView
                                android:layout_width="30dp"
                                android:layout_height="wrap_content"
                                android:text="@string/pts"
                                android:textAlignment="center"
                                android:textColor="@android:color/white"
                                android:textStyle="bold"/>

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvStanding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card"
                    android:nestedScrollingEnabled="false"
                    android:paddingTop="20dp"
                    tools:listitem="@layout/standing_item"/>

            </RelativeLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
        android:id="@+id/mainProgressBar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"/>

</RelativeLayout>