<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@android:color/transparent">

        <com.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:elevation="4dp"
            app:shape_arc_cropDirection="outside"
            app:shape_arc_height="28dp"
            app:shape_arc_position="bottom">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="515dp"
                android:scaleType="centerCrop"
                android:background="@color/colorSemiDarkBlue">

                <RelativeLayout
                    android:id="@+id/layoutProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="@android:color/transparent">

                    <ImageView
                        android:id="@+id/ivLeague"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/ic_soccer"
                        android:contentDescription="@string/league_logo" />

                    <TextView
                        android:id="@+id/tvLeagueName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_below="@+id/ivLeague"
                        android:layout_centerHorizontal="true"
                        android:textSize="30sp"
                        android:text="@string/league_name"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:id="@+id/tvLeagueDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_below="@+id/tvLeagueName"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:text="@string/league_desc"
                        android:maxLines="9"
                        android:textColor="@android:color/white" />

                </RelativeLayout>

            </RelativeLayout>

        </com.github.florent37.shapeofview.shapes.ArcView>

    </RelativeLayout>

</RelativeLayout>