<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            app:cardBackgroundColor="@color/colorSemiDarkBlue">

            <TextView
                android:id="@+id/dateScheduleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center_horizontal"
                tools:text="28 September 2018"
                android:textColor="@android:color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearCard"
                android:orientation="horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/homeImg"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        tools:src="@drawable/ic_soccer"
                        android:contentDescription="@string/team_logo" />

                    <TextView
                        android:id="@+id/homeNameTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        tools:text="Team A"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:id="@+id/homeScorerTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        tools:text="12':Goal Scorer"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/homeScoreTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="2"
                        android:textSize="32sp"
                        android:textColor="@android:color/white"
                        android:textStyle="bold"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/versus"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/awayScoreTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="2"
                        android:textSize="32sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/awayImg"
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        tools:src="@drawable/ic_soccer"
                        android:contentDescription="@string/team_logo" />

                    <TextView
                        android:id="@+id/awayNameTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        tools:text="Team B"
                        android:textColor="@android:color/white"/>

                    <TextView
                        android:id="@+id/awayScorerTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textSize="12sp"
                        tools:text="12':Goal Scorer"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:text="@string/lineups"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="Goal Keeper A"
                android:id="@+id/gkHomeTv"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/goal_keeper"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="Goal Keeper B"
                android:textAlignment="textEnd"
                android:id="@+id/gkAwayTv"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="Defense A"
                android:id="@+id/defHomeTv"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/defense"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="Defense B"
                android:textAlignment="textEnd"
                android:id="@+id/defAwayTv"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="Midfield A"
                android:id="@+id/midHomeTv"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/midfield"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="Midfield B"
                android:textAlignment="textEnd"
                android:id="@+id/midAwayTv"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="Forward A"
                android:id="@+id/forHomeTv"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="12sp"
                android:textStyle="bold"
                android:text="@string/forward"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="Forward B"
                android:textAlignment="textEnd"
                android:id="@+id/forAwayTv"
                android:textColor="@android:color/black"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_gravity="center"
            android:text="@string/subtitutes"
            android:textStyle="bold"
            android:textColor="@android:color/black"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="Subtitutes A"
                android:id="@+id/subHomeTv"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                tools:text="Subtitutes B"
                android:textAlignment="textEnd"
                android:id="@+id/subAwayTv"
                android:textColor="@android:color/black"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>