<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.detailteam.DetailTeamActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:elevation="4dp"
            android:id="@+id/detailTeamContainer"
            app:cardBackgroundColor="@color/colorSemiDarkBlue">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgBadge"
                    android:layout_width="120dp"
                    android:layout_height="140dp"
                    tools:src="@drawable/ic_soccer"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:contentDescription="@string/team_logo" />

                <TextView
                    android:id="@+id/teamName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22sp"
                    android:layout_marginTop="8dp"
                    android:layout_below="@id/imgBadge"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    tools:text="Team Name"/>

                <TextView
                    android:id="@+id/tvStadium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/teamName"
                    android:layout_centerHorizontal="true"
                    android:textSize="16sp"
                    android:textColor="@android:color/white"
                    tools:text="Stadium Name"/>

                <TextView
                    android:id="@+id/tvManager"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvStadium"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="10dp"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"
                    tools:text="Manager Name"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/detailTeamContainer"
            android:layout_margin="8dp"
            android:elevation="4dp"
            android:id="@+id/ovwContainer">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvManager"
                android:orientation="vertical"
                android:paddingBottom="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"
                    android:text="@string/team_overview"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textAlignment="center"
                    android:id="@+id/teamOverview"
                    android:textSize="13sp"
                    android:layout_marginRight="8dp"
                    android:layout_marginLeft="8dp"
                    android:textColor="@android:color/black"
                    android:text="@string/league_desc"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</ScrollView>